borrado textchanged, añadido ClickEnMarca y añadido refresh a la imagen de marca

--- a/ProyectoEtiquetaAviso/ProyectoEtiquetaAviso.csproj
+++ b/ProyectoEtiquetaAviso/ProyectoEtiquetaAviso.csproj
@@ -52,5 +52,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="EtiquetaAviso.resx">
+      <DependentUpon>EtiquetaAviso.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
